# DJ-Console

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  NoiseGenerator.cpp  NoiseGenerator.h  README.md  SineWaveGenerator.h  main.cpp
docs/: Doxyfile.in
src/: CMakeLists.txt  DJConsole.cpp  Playlist.cpp  Playlist.h  Song.h
src/audio/player/: AudioPlayer.h
src/ui/components/: MainComponent.h  PlaylistViewModel.h  Track.h
src/ui/windows/: MainWindow.h
test/: CMakeLists.txt  testAudioPlayer.cpp  test_Playlist.cpp
